VAN-25859: Added width size to fix misalignment

--- a/vtr-ui/src/app/modules/snapshot/components/widgets/widget-snapshot/widget-snapshot.component.scss
+++ b/vtr-ui/src/app/modules/snapshot/components/widgets/widget-snapshot/widget-snapshot.component.scss
@@ -27,9 +27,9 @@
 		}
 	}
 
-
 	.information {
 		display: inline-block;
+		width: 100%;
 
 		.description {
 			color: $light;
